removed boruta code so if yo need that go back 1 or two commits

--- a/PYTHON/ToxicityClustering.ipynb
+++ b/PYTHON/ToxicityClustering.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,67 @@
       "0.9409992912827783\n",
       "0.9433026222537209\n",
       "0.9452515946137491\n",
-      "0.9475549255846916\n"
+      "0.9475549255846916\n",
+      "0.9482636428065201\n",
+      "0.9486180014174344\n",
+      "0.9487951807228915\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:947: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9487951807228916\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:947: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9489723600283486\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:947: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:947: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9487951807228916\n",
+      "['Extended_Oral_Cavity_doses', 'lateralities_B', 'Supraglottic_Larynx_doses', 'Masseter_M_volumes_combined', 'Mandible_neg_dists', 'Hyoid_bone_doses', 'Soft_Palate_volumes', 'Spinal_Cord_doses', 'Sternocleidomastoid_M_doses_combined', 'SPC_neg_dists', 'Larynx_volumes', 'Thyroid_cartilage_volumes', 'Genioglossus_M_doses', 'Ant_Digastric_M_doses_combined', 'Parotid_Gland_doses_combined', 'lateralities_L', 'Mandible_doses', 'Brainstem_volumes', 't_volumes_0', 'Tongue_neg_dists', 'Cricoid_cartilage_doses', 'IPC_volumes', 'Submandibular_Gland_neg_dists_combined', 'Medial_Pterygoid_M_neg_dists_combined', 'Parotid_Gland_neg_dists_combined', 'Lateral_Pterygoid_M_doses_combined', 'Brainstem_doses', 'Soft_Palate_doses']\n",
+      "number of features:  28\n",
+      "l1_complete4\n",
+      "[[ 10.  15.]\n",
+      " [ 22.   8.]\n",
+      " [ 22.   2.]\n",
+      " [112.   9.]]\n",
+      "correlation:  3.0321361054388816e-08\n",
+      "rand score:  0.1812944717722977 \n",
+      "\n"
      ]
     }
    ],
