added in the clustering python files and feature selection for best clustering

--- a/PYTHON/ToxicityClassification.ipynb
+++ b/PYTHON/ToxicityClassification.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
     "#                    XGBClassifier(5, booster = 'gblinear'),\n",
     "#                    XGBClassifier(),\n",
     "#                    XGBClassifier(booster = 'dart'),\n",
-    "                    LogisticRegression(solver = 'lbfgs', max_iter = 3000),\n",
+    "                    LogisticRegression(solver = 'lbfgs', max_iter = 8000),\n",
     "#                    MetricLearningClassifier(use_softmax = True),\n",
     "#                    MetricLearningClassifier(\n",
     "#                            resampler = under_sampling.OneSidedSelection()),\n",
@@ -323,7 +323,7 @@
     "                  ]\n",
     "\n",
     "cluster_root= 'data/clustering_results/'\n",
-    "feature_file_names = ['toxicityClustering2']\n",
+    "feature_file_names = ['forwardSelectionClustering2']\n",
     "#llop through all files of feature extracted from toxicity clustering\n",
     "all_results = []\n",
     "additional_features = None\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -357,21 +357,21 @@
       "toxicity\n",
       "0.7402551381998583\n",
       "\n",
-      "toxicityClustering2\n",
+      "forwardSelectionClustering2\n",
       "feeding_tubes\n",
-      "0.6865423901940756\n",
+      "0.6947139938712972\n",
       "aspiration\n",
-      "0.7596685082872928\n",
+      "0.6216923524280313\n",
       "toxicity\n",
-      "0.7336109142452162\n",
+      "0.6667257264351525\n",
       "\n",
-      "toxicityClustering2+baseline\n",
+      "forwardSelectionClustering2+baseline\n",
       "feeding_tubes\n",
-      "0.756511746680286\n",
+      "0.79341164453524\n",
       "aspiration\n",
-      "0.8384704856062809\n",
+      "0.7810410002907822\n",
       "toxicity\n",
-      "0.8074946846208362\n",
+      "0.791991495393338\n",
       "\n"
      ]
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
       "{'use_baseline_features': False, 'top_features': None, 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-      "                   intercept_scaling=1, l1_ratio=None, max_iter=3000,\n",
+      "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
       "                   warm_start=False)\n",
@@ -429,48 +429,48 @@
       "0.6031183557760453\n",
       "\n",
       "\n",
-      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/toxicityClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
+      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-      "                   intercept_scaling=1, l1_ratio=None, max_iter=3000,\n",
+      "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6736465781409602\n",
+      "0.6966292134831461\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.7548706019191624\n",
+      "0.5510322768246583\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.716690290574061\n",
+      "0.6890503189227498\n",
       "\n",
       "\n",
-      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/toxicityClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-      "                   intercept_scaling=1, l1_ratio=None, max_iter=3000,\n",
+      "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.5112359550561798\n",
+      "0.4287538304392237\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.6182029659784821\n",
+      "0.1933701657458563\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.5721119773210489\n",
+      "0.35613040396881646\n",
       "\n",
       "\n"
      ]
@@ -493,17 +493,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/toxicityClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': []}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': []}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-      "                   intercept_scaling=1, l1_ratio=None, max_iter=3000,\n",
+      "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
       "                   warm_start=False)\n",
@@ -522,10 +522,10 @@
       "0.7888022678951098\n",
       "\n",
       "\n",
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/toxicityClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-      "                   intercept_scaling=1, l1_ratio=None, max_iter=3000,\n",
+      "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
       "                   warm_start=False)\n",
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 328,
    "metadata": {
     "scrolled": true
    },
@@ -566,48 +566,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/toxicityClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-      "                   intercept_scaling=1, l1_ratio=None, max_iter=3000,\n",
+      "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6430030643513789\n",
+      "0.6698161389172624\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8528642047106717\n",
+      "0.8423960453620238\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.7978384124734231\n",
+      "0.7925230333097093\n",
       "\n",
       "\n",
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/toxicityClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-      "                   intercept_scaling=1, l1_ratio=None, max_iter=3000,\n",
+      "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6445352400408579\n",
+      "0.6728804902962207\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8554812445478337\n",
+      "0.8450130851991858\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.80049610205528\n",
+      "0.7990786676116229\n",
       "\n",
       "\n"
      ]
@@ -626,55 +626,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/toxicityClustering2.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-      "                   intercept_scaling=1, l1_ratio=None, max_iter=3000,\n",
+      "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.715270684371808\n",
+      "0.8140960163432074\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.7571968595521954\n",
+      "0.7406222739168362\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.7762225372076542\n",
+      "0.8148476257973069\n",
       "\n",
       "\n",
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/toxicityClustering2.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-      "                   intercept_scaling=1, l1_ratio=None, max_iter=3000,\n",
+      "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6631767109295199\n",
+      "0.7425944841675178\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8319278860133759\n",
+      "0.8359988368711835\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8070517363571935\n",
+      "0.8231750531537916\n",
       "\n",
       "\n"
      ]
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
