broke clustering maybe

--- a/PYTHON/ToxicityClassification.ipynb
+++ b/PYTHON/ToxicityClassification.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from numpy.random import seed\n",
     "seed(1)\n",
@@ -40,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -359,19 +367,19 @@
       "\n",
       "forwardSelectionClustering2\n",
       "feeding_tubes\n",
-      "0.6947139938712972\n",
+      "0.7311031664964249\n",
       "aspiration\n",
-      "0.6216923524280313\n",
+      "0.7827856935155568\n",
       "toxicity\n",
-      "0.6667257264351525\n",
+      "0.7719702338766832\n",
       "\n",
       "forwardSelectionClustering2+baseline\n",
       "feeding_tubes\n",
-      "0.79341164453524\n",
+      "0.7835801838610827\n",
       "aspiration\n",
-      "0.7810410002907822\n",
+      "0.8364350101773771\n",
       "toxicity\n",
-      "0.791991495393338\n",
+      "0.8189227498228207\n",
       "\n"
      ]
     }
@@ -400,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -438,17 +446,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6966292134831461\n",
+      "0.7063329928498469\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.5510322768246583\n",
+      "0.7633032858389066\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.6890503189227498\n",
+      "0.7122608079376329\n",
       "\n",
       "\n",
       "{'use_baseline_features': False, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
@@ -460,17 +468,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.4287538304392237\n",
+      "0.5255362614913177\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.1933701657458563\n",
+      "0.6106426286711253\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.35613040396881646\n",
+      "0.5868178596739901\n",
       "\n",
       "\n"
      ]
@@ -493,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -575,17 +583,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6698161389172624\n",
+      "0.6917773237997957\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8423960453620238\n",
+      "0.8653678394882233\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.7925230333097093\n",
+      "0.8297306874557051\n",
       "\n",
       "\n",
       "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
@@ -597,17 +605,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6728804902962207\n",
+      "0.6971399387129724\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8450130851991858\n",
+      "0.8676940971212561\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.7990786676116229\n",
+      "0.8327427356484763\n",
       "\n",
       "\n"
      ]
@@ -626,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -642,17 +650,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.8140960163432074\n",
+      "0.7076098059244127\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.7406222739168362\n",
+      "0.7624309392265194\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8148476257973069\n",
+      "0.7220056697377746\n",
       "\n",
       "\n",
       "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
@@ -664,17 +672,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.7425944841675178\n",
+      "0.7114402451481103\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8359988368711835\n",
+      "0.8572259377726084\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8231750531537916\n",
+      "0.8167965981573353\n",
       "\n",
       "\n"
      ]
@@ -693,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
