--- a/PYTHON/ToxicityClassification.ipynb
+++ b/PYTHON/ToxicityClassification.ipynb
@@ -233,9 +233,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\git_repos\\CAMP-RT\\PYTHON\\Patient.py:359: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  mean_tumor_distances /= tumor_volume\n",
       "D:\\git_repos\\CAMP-RT\\PYTHON\\Patient.py:360: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  mean_tumor_distances /= tumor_volume\n",
+      "D:\\git_repos\\CAMP-RT\\PYTHON\\Patient.py:361: RuntimeWarning: invalid value encountered in true_divide\n",
       "  tumor_position /= tumor_volume\n"
      ]
     },
@@ -243,28 +243,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 [{0, 1}, {2}]\n",
-      "128 [{0}, {1, 2, 3, 4}]\n",
-      "notation not accounted for in lymph nodes: R3/R4\n",
-      "notation not accounted for in lymph nodes: L2/3\n",
-      "notation not accounted for in lymph nodes: R3/4\n",
-      "notation not accounted for in lymph nodes: R2/3\n",
-      "notation not accounted for in lymph nodes: R2-R4\n",
-      "notation not accounted for in lymph nodes: L2/3\n",
-      "notation not accounted for in lymph nodes: L2/3\n",
-      "notation not accounted for in lymph nodes: L2/3\n",
-      "notation not accounted for in lymph nodes: R2/3\n",
-      "notation not accounted for in lymph nodes: R2/3/4\n",
-      "notation not accounted for in lymph nodes: L2/3\n",
-      "notation not accounted for in lymph nodes: L2/3\n",
-      "notation not accounted for in lymph nodes: R2/3\n",
-      "notation not accounted for in lymph nodes: R2/3\n",
-      "notation not accounted for in lymph nodes: R2/3\n",
-      "10021 [{0, 1}, {2}]\n",
-      "10074 [{0, 1}, {2}]\n",
       "error reading tumor volume for  10091\n",
       "error reading tumor volume for  10148\n",
-      "10191 [{0, 1}, {2}]\n",
       "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\control_flow_ops.py:423: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Colocations handled automatically by placer.\n",
@@ -289,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -367,19 +347,19 @@
       "\n",
       "forwardSelectionClustering2\n",
       "feeding_tubes\n",
-      "0.7311031664964249\n",
+      "0.8088610827374874\n",
       "aspiration\n",
-      "0.7827856935155568\n",
+      "0.7960162838034313\n",
       "toxicity\n",
-      "0.7719702338766832\n",
+      "0.7993444365698086\n",
       "\n",
       "forwardSelectionClustering2+baseline\n",
       "feeding_tubes\n",
-      "0.7835801838610827\n",
+      "0.8322267620020429\n",
       "aspiration\n",
-      "0.8364350101773771\n",
+      "0.8514102936900261\n",
       "toxicity\n",
-      "0.8189227498228207\n",
+      "0.8312367115520908\n",
       "\n"
      ]
     }
@@ -408,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -446,17 +426,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.7063329928498469\n",
+      "0.7469356486210419\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.7633032858389066\n",
+      "0.753707473102646\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.7122608079376329\n",
+      "0.7551381998582565\n",
       "\n",
       "\n",
       "{'use_baseline_features': False, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
@@ -468,17 +448,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.5255362614913177\n",
+      "0.6986721144024515\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.6106426286711253\n",
+      "0.6615295143937191\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.5868178596739901\n",
+      "0.630049610205528\n",
       "\n",
       "\n"
      ]
@@ -501,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -583,17 +563,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6917773237997957\n",
+      "0.7280388151174668\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8653678394882233\n",
+      "0.853736551323059\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8297306874557051\n",
+      "0.832211197732105\n",
       "\n",
       "\n",
       "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
@@ -605,17 +585,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6971399387129724\n",
+      "0.7349336057201226\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8676940971212561\n",
+      "0.8557720267519627\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8327427356484763\n",
+      "0.8385896527285613\n",
       "\n",
       "\n"
      ]
@@ -634,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -650,17 +630,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.7076098059244127\n",
+      "0.7369765066394279\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.7624309392265194\n",
+      "0.7444024425705147\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.7220056697377746\n",
+      "0.7507087172218284\n",
       "\n",
       "\n",
       "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
@@ -672,17 +652,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.7114402451481103\n",
+      "0.7331460674157303\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8572259377726084\n",
+      "0.8517010758941552\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8167965981573353\n",
+      "0.8307937632884479\n",
       "\n",
       "\n"
      ]
@@ -701,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,6 +698,28 @@
     "df.to_csv('data/toxcity_classification_tests_'\n",
     "          + datetime.fromtimestamp(time()).strftime('%Y_%m_%d_%H%M%S')\n",
     "          + '.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['AUC', 'Baseline', 'Top_feature_file', 'Top_features', 'classifier',\n",
+       "       'cluster_names', 'outcome', 'resampler'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns\n"
    ]
   },
   {
