--- a/PYTHON/ToxicityClassification.ipynb
+++ b/PYTHON/ToxicityClassification.ipynb
@@ -9,7 +9,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n"
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W1002 23:27:59.467832  6116 deprecation_wrapper.py:119] From F:\\Skool\\EVL_Research\\CAMP-RT\\PYTHON\\PatientSet.py:8: The name tf.set_random_seed is deprecated. Please use tf.compat.v1.set_random_seed instead.\n",
+      "\n",
+      "Using TensorFlow backend.\n",
+      "F:\\Anaconda\\lib\\site-packages\\dask\\config.py:168: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  data = yaml.load(f.read()) or {}\n",
+      "F:\\Anaconda\\lib\\site-packages\\sklearn\\externals\\six.py:31: DeprecationWarning: The module is deprecated in version 0.21 and will be removed in version 0.23 since we've dropped support for Python 2.7. Please rely on the official version of six (https://pypi.org/project/six/).\n",
+      "  \"(https://pypi.org/project/six/).\", DeprecationWarning)\n"
      ]
     }
    ],
@@ -233,9 +240,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\git_repos\\CAMP-RT\\PYTHON\\Patient.py:360: RuntimeWarning: invalid value encountered in true_divide\n",
+      "F:\\Skool\\EVL_Research\\CAMP-RT\\PYTHON\\Patient.py:360: RuntimeWarning: invalid value encountered in true_divide\n",
       "  mean_tumor_distances /= tumor_volume\n",
-      "D:\\git_repos\\CAMP-RT\\PYTHON\\Patient.py:361: RuntimeWarning: invalid value encountered in true_divide\n",
+      "F:\\Skool\\EVL_Research\\CAMP-RT\\PYTHON\\Patient.py:361: RuntimeWarning: invalid value encountered in true_divide\n",
       "  tumor_position /= tumor_volume\n"
      ]
     },
@@ -243,14 +250,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "error reading tumor volume for  10041\n",
       "error reading tumor volume for  10091\n",
-      "error reading tumor volume for  10148\n",
-      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\control_flow_ops.py:423: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.cast instead.\n",
+      "error reading tumor volume for  10148\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W1002 23:28:27.624442  6116 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "W1002 23:28:27.625442  6116 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "W1002 23:28:27.629443  6116 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:133: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
+      "\n",
+      "W1002 23:28:27.637443  6116 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4115: The name tf.random_normal is deprecated. Please use tf.random.normal instead.\n",
+      "\n",
+      "W1002 23:28:27.721448  6116 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "patient data loaded...\n",
       "\n"
@@ -269,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +335,7 @@
     "                  ]\n",
     "\n",
     "cluster_root= 'data/clustering_results/'\n",
-    "feature_file_names = ['forwardSelectionClustering2']\n",
+    "feature_file_names = ['metaClusteringBootstrapped3']\n",
     "#llop through all files of feature extracted from toxicity clustering\n",
     "all_results = []\n",
     "additional_features = None\n",
@@ -330,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -345,21 +369,21 @@
       "toxicity\n",
       "0.7402551381998583\n",
       "\n",
-      "forwardSelectionClustering2\n",
+      "metaClusteringBootstrapped3\n",
       "feeding_tubes\n",
-      "0.8088610827374874\n",
+      "0.7649387129724208\n",
       "aspiration\n",
-      "0.7960162838034313\n",
+      "0.7598138993893574\n",
       "toxicity\n",
-      "0.7993444365698086\n",
+      "0.7929659815733522\n",
       "\n",
-      "forwardSelectionClustering2+baseline\n",
+      "metaClusteringBootstrapped3+baseline\n",
       "feeding_tubes\n",
-      "0.8322267620020429\n",
+      "0.8068181818181819\n",
       "aspiration\n",
-      "0.8514102936900261\n",
+      "0.8438499563826695\n",
       "toxicity\n",
-      "0.8312367115520908\n",
+      "0.8428419560595323\n",
       "\n"
      ]
     }
@@ -388,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +441,7 @@
       "0.6031183557760453\n",
       "\n",
       "\n",
-      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
+      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -426,20 +450,20 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.7469356486210419\n",
+      "0.7359550561797752\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.753707473102646\n",
+      "0.7542890375109044\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.7551381998582565\n",
+      "0.7671863926293409\n",
       "\n",
       "\n",
-      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -448,17 +472,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6986721144024515\n",
+      "0.6292134831460674\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.6615295143937191\n",
+      "0.620529223611515\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.630049610205528\n",
+      "0.6647767540751239\n",
       "\n",
       "\n"
      ]
@@ -481,14 +505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': []}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': []}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -510,7 +534,7 @@
       "0.7888022678951098\n",
       "\n",
       "\n",
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -545,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -554,7 +578,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -563,20 +587,20 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.7280388151174668\n",
+      "0.6912665985699694\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.853736551323059\n",
+      "0.8601337598138994\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.832211197732105\n",
+      "0.8332742735648476\n",
       "\n",
       "\n",
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -585,17 +609,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.7349336057201226\n",
+      "0.703524004085802\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8557720267519627\n",
+      "0.8633323640593196\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8385896527285613\n",
+      "0.8417788802267895\n",
       "\n",
       "\n"
      ]
@@ -614,14 +638,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -630,20 +654,20 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.7369765066394279\n",
+      "0.6790091930541369\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.7444024425705147\n",
+      "0.7359697586507705\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.7507087172218284\n",
+      "0.7381289865343729\n",
       "\n",
       "\n",
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/forwardSelectionClustering2.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/metaClusteringBootstrapped3.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -652,17 +676,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.7331460674157303\n",
+      "0.686414708886619\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8517010758941552\n",
+      "0.861878453038674\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8307937632884479\n",
+      "0.8270729978738482\n",
       "\n",
       "\n"
      ]
@@ -681,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +737,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,6 +745,48 @@
    "source": [
     "df.columns\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
