--- a/PYTHON/ToxicityClustering.ipynb
+++ b/PYTHON/ToxicityClustering.ipynb
@@ -9,7 +9,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n"
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W1002 19:34:47.653546 10824 deprecation_wrapper.py:119] From F:\\Skool\\EVL_Research\\CAMP-RT\\PYTHON\\PatientSet.py:8: The name tf.set_random_seed is deprecated. Please use tf.compat.v1.set_random_seed instead.\n",
+      "\n",
+      "Using TensorFlow backend.\n",
+      "F:\\Anaconda\\lib\\site-packages\\dask\\config.py:168: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  data = yaml.load(f.read()) or {}\n"
      ]
     }
    ],
@@ -51,9 +56,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "D:\\git_repos\\CAMP-RT\\PYTHON\\Patient.py:360: RuntimeWarning: invalid value encountered in true_divide\n",
+      "F:\\Skool\\EVL_Research\\CAMP-RT\\PYTHON\\Patient.py:360: RuntimeWarning: invalid value encountered in true_divide\n",
       "  mean_tumor_distances /= tumor_volume\n",
-      "D:\\git_repos\\CAMP-RT\\PYTHON\\Patient.py:361: RuntimeWarning: invalid value encountered in true_divide\n",
+      "F:\\Skool\\EVL_Research\\CAMP-RT\\PYTHON\\Patient.py:361: RuntimeWarning: invalid value encountered in true_divide\n",
       "  tumor_position /= tumor_volume\n"
      ]
     },
@@ -61,14 +66,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "error reading tumor volume for  10041\n",
       "error reading tumor volume for  10091\n",
-      "error reading tumor volume for  10148\n",
-      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\control_flow_ops.py:423: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.cast instead.\n",
+      "error reading tumor volume for  10148\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W1002 19:35:16.189178 10824 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "W1002 19:35:16.190178 10824 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "W1002 19:35:16.194178 10824 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:133: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
+      "\n",
+      "W1002 19:35:16.201179 10824 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4115: The name tf.random_normal is deprecated. Please use tf.random.normal instead.\n",
+      "\n",
+      "W1002 19:35:16.291184 10824 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "patient data loaded...\n",
       "\n"
@@ -91,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,18 +124,17 @@
     "#we don't cluster on these\n",
     "unclusterable_features = ['t_volumes', 'bilateral', 'total_volumes']\n",
     "#we cluster on these (each individually) if feature_clustering is defined,\n",
-    "clusterable_features = ['tumor_distances', 'volumes']\n",
+    "clusterable_features =['tumor_distances', 'volumes','tsimdoses']\n",
     "\n",
     "#features specifically for feature selection vs actually using.  Should either be\n",
     "#some combo of actual and predicted dose for this\n",
-    "train_features = ['tsimdoses']\n",
-    "test_features = ['tsimdoses']\n",
+    "train_features = [] #['doses']\n",
+    "test_features = [] #['tsimdoses']\n",
     "\n",
     "#number of times to resample and doing feature selection\n",
     "#if n = 1, just use the first result\n",
-    "n_samples = 5\n",
-    "\n",
-    "df_rescale =lambda x: (x - x.mean(axis = 0))/x.std(axis = 0)#None \n",
+    "n_samples = 1\n",
+    "df_rescale = Metrics.normalize\n",
     "\n",
     "#put some bounds on the features to subset\n",
     "min_features = 2\n",
@@ -135,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {
     "scrolled": true
    },
@@ -146,7 +167,37 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n",
-      "toxicity\n"
+      "toxicity\n",
+      "['Soft_Palate_tsimdoses', 'Extended_Oral_Cavity_tsimdoses']\n",
+      "3.825051386741052e-11\n",
+      "\n",
+      "\n",
+      "\n",
+      "[[ 6. 13.]\n",
+      " [58.  5.]\n",
+      " [71.  2.]\n",
+      " [31. 14.]]\n",
+      "3.825053173481988e-11\n",
+      "number of features:  2\n",
+      "l1_weighted4\n",
+      "[[ 6. 13.]\n",
+      " [58.  5.]\n",
+      " [71.  2.]\n",
+      " [31. 14.]]\n",
+      "correlation:  3.825053173481988e-11\n",
+      "rand score:  0.11630804448702563 \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "F:\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:50: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     }
    ],
@@ -215,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -224,31 +275,14 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n",
-      "Index(['Soft_Palate_tsimdoses', 'bilateral', 'Hyoid_bone_tumor_distances'], dtype='object')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:3940: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  errors=errors)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kmeans4\n",
-      "[[10.  8.]\n",
-      " [91.  5.]\n",
-      " [29. 20.]\n",
-      " [36.  1.]]\n",
-      "correlation:  1.572458184797956e-09\n",
-      "rand score:  0.1240217399244526 \n",
+      "Index(['Soft_Palate_tsimdoses', 'Extended_Oral_Cavity_tsimdoses'], dtype='object')\n",
+      "l1_weighted4\n",
+      "[[ 6. 13.]\n",
+      " [58.  5.]\n",
+      " [71.  2.]\n",
+      " [31. 14.]]\n",
+      "correlation:  3.825053173481988e-11\n",
+      "rand score:  0.11630804448702563 \n",
       "\n"
      ]
     },
@@ -256,7 +290,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:25: SettingWithCopyWarning: \n",
+      "F:\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:25: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -283,8 +317,8 @@
     "print(combined_df.columns)\n",
     "combined_clusters = get_optimal_clustering(combined_df.values, db.toxicity,\n",
     "                                    metric = cluster_metric,\n",
-    "                                    min_clusters = 2,\n",
-    "                                    max_clusters = 2)\n",
+    "                                    min_clusters = n_clusters,\n",
+    "                                    max_clusters = n_clusters)\n",
     "print(combined_clusters[1].method)\n",
     "print(get_contingency_table(combined_clusters[0], toxicity))\n",
     "print('correlation: ', combined_clusters[1].correlation)\n",
@@ -294,56 +328,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "if save_root is not None:\n",
     "    combined_df.to_csv(save_root\n",
-    "                 + 'forwardSelectionClustering2.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[10.  8.]\n",
-      " [36.  1.]\n",
-      " [29. 20.]\n",
-      " [91.  5.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "labels = FClusterer(4).fit_predict(to_use.values)\n",
-    "print(get_contingency_table(labels.ravel(), toxicity))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Soft_Palate_tsimdoses', 'bilateral', 'Hyoid_bone_tumor_distances',\n",
-       "       'cluster_labels'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "combined_df.columns"
+    "                 + 'metaClusteringBootstrapped.csv')"
    ]
   },
   {
