--- a/PYTHON/SensitivityAnalysis.ipynb
+++ b/PYTHON/SensitivityAnalysis.ipynb
@@ -6,15 +6,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /media/andrew/DATA/git_repos/CAMP-RT/PYTHON/PatientSet.py:8: The name tf.set_random_seed is deprecated. Please use tf.compat.v1.set_random_seed instead.\n",
+      "\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W1002 19:34:59.407218  1360 deprecation_wrapper.py:119] From F:\\Skool\\EVL_Research\\CAMP-RT\\PYTHON\\PatientSet.py:8: The name tf.set_random_seed is deprecated. Please use tf.compat.v1.set_random_seed instead.\n",
-      "\n",
-      "Using TensorFlow backend.\n",
-      "F:\\Anaconda\\lib\\site-packages\\dask\\config.py:168: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  data = yaml.load(f.read()) or {}\n"
+      "Using TensorFlow backend.\n"
      ]
     }
    ],
@@ -49,9 +52,9 @@
    "outputs": [],
    "source": [
     "#plotting parameter\n",
-    "SMALL_SIZE = 14\n",
-    "MEDIUM_SIZE = 16\n",
-    "BIGGER_SIZE = 18\n",
+    "SMALL_SIZE = 18\n",
+    "MEDIUM_SIZE = 20\n",
+    "BIGGER_SIZE = 24\n",
     "FIG_SIZE = (20,15)\n",
     "\n",
     "plt.rc('font', size=SMALL_SIZE)          # controls default text sizes\n",
@@ -2011,5 +2014,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
